--- a/style.css
+++ b/style.css
@@ -1,15 +1,18 @@
-body {
+.body {
+    align-items: center;
     font-family: Arial, sans-serif;
 }
 
-h1 {
-    text-align: center;
-    background-color: lightblue;
-    font-family: Arial, Helvetica, sans-serif
-    
+#centered{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-th {
+.head1 {
     text-align: center;
-    font-weight: bold;
+    color: #000;
+    font-family: Arial, Helvetica, sans-serif
+    
 }
